--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.124",
+    "autoprefixer": "^10.4.1",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
