--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "firebase": "^9.6.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.55",
