--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "firebase": "^9.6.1",
     "next": "12.0.7",
     "react": "17.0.2",
